--- a/css/components.css
+++ b/css/components.css
@@ -22,12 +22,12 @@
 }
 
 .button--primary {
-  background-color: var(--color-primary);
+  background-color: var(--color-accent);
   color: var(--color-on-primary);
 }
 
 .button--primary:hover {
-  background-color: var(--color-primary-2);
+  background-color: var(--color-accent-hover);
 }
 
 .button--dark {
@@ -81,8 +81,8 @@
 }
 
 .checkbox input:checked {
-  background-color: var(--color-primary);
-  border-color: var(--color-primary);
+  background-color: var(--color-accent);
+  border-color: var(--color-accent);
 }
 
 .checkbox input:checked::before {
@@ -91,7 +91,7 @@
 
 /* --- Link --------------------------------------------------------------- */
 .link {
-  color: var(--color-primary);
+  color: var(--color-accent);
   font-size: var(--fs-body);
   letter-spacing: var(--ls-body);
 }
